--- a/.github/workflows/bicep-validate-deploy.yml
+++ b/.github/workflows/bicep-validate-deploy.yml
@@ -8,9 +8,9 @@ on:
   push:
     branches: 
     - main
-  pull_request:
-    branches:
-    - main
+  #pull_request:
+    #branches:
+    #- main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -25,6 +25,7 @@ jobs:
   bicep-unit-tests:
     name: 'Bicep Unit Tes'
     runs-on:  ubuntu-latest
+    environment: production
 
     steps:
     # Checkout the repository to the GitHub Actions runner
