--- a/.github/workflows/bicep-validate-deploy.yml
+++ b/.github/workflows/bicep-validate-deploy.yml
@@ -63,11 +63,55 @@ jobs:
       uses: bridgecrewio/checkov-action@master
       with: 
         framework: bicep
+
+  bicep-whatif:
+    name: 'Bicep Whatif'
+    runs-on:  ubuntu-latest
+    environment: production
+    needs: [bicep-unit-tests]
+
+    steps:
+    
+    # Preview changes
+    - name: What-If
+      uses: Azure/cli@v2
+      with:
+        inlineScript: |
+          az deployment sub what-if \
+            --name whatif-${{ github.run_id }} \
+            --template-file main.bicep \
+            --location ${{ vars.AZURE_RG_LOCATION }} > whatif
+
+    # Create string output of Whatif
+    - name: Create String Output
+      id: whatif-string
+      run: |
+        WHATIF=$(cat whatif)
+        
+        delimiter="$(openssl rand -hex 8)"
+        echo "summary<<${delimiter}" >> $GITHUB_OUTPUT
+        echo "## Whatif Output" >> $GITHUB_OUTPUT
+        echo "<details><summary>Click to expand</summary>" >> $GITHUB_OUTPUT
+        echo "" >> $GITHUB_OUTPUT
+        echo '```' >> $GITHUB_OUTPUT
+        echo "$WHATIF" >> $GITHUB_OUTPUT
+        echo '```' >> $GITHUB_OUTPUT
+        echo "</details>" >> $GITHUB_OUTPUT
+        echo "${delimiter}" >> $GITHUB_OUTPUT
+
+    # Publish Terraform Plan as task summary
+    - name: Publish Whatif to Task Summary
+      env:
+        SUMMARY: ${{ steps.whatif-string.outputs.summary }}
+      run: |
+        echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
+      
     
   # This workflow contains a second job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    needs: [bicep-whatif]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
