--- a/.github/workflows/json-variables-test.yml
+++ b/.github/workflows/json-variables-test.yml
@@ -19,25 +19,17 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
 
-      - name: view the secrets context 1
+      - name: view the variables context
         shell: bash
-        run: echo "$SECRETS_CONTEXT"
+        run: echo "$VARIABLES_CONTEXT"
+        env:
+          VARIABLES_CONTEXT: ${{ toJson(vars) }}    
 
       - name: view the secrets context
         shell: bash
         run: echo "$SECRETS_CONTEXT"
         env:
-          SECRETS_CONTEXT: ${{ toJson(secrets) }}    
-
-
-      - name: Render json
-        # You may pin to the exact commit or the version.
-        # uses: loveloper44/render-json-action@b4e05d10a5f9dfb123737039dfd19f5ee2e981d8
-        uses: loveloper44/render-json-action@v2.0.2
-        with:
-          # Json file path
-          json: 'Render-json.json'
-        continue-on-error: True
+          SECRETS_CONTEXT: ${{ toJson(secrets) }}
 
       - name: json-variables
         # You may pin to the exact commit or the version.
