--- a/.github/workflows/json-variables-test.yml
+++ b/.github/workflows/json-variables-test.yml
@@ -15,7 +15,10 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    environment: production
+    
+    environment:
+      name: ${{'production' if github.ref_name == 'master' }}
+
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -31,18 +34,6 @@ jobs:
         run: echo "$SECRETS_CONTEXT"
         env:
           SECRETS_CONTEXT: ${{ toJson(secrets) }}
-
-      - name: json-variables
-        # You may pin to the exact commit or the version.
-        # uses: jnus/json-variables@8a835f95f0f4e87cd98330ca9e33ad6482fdf9b2
-        uses: jnus/json-variables@v1.0
-        with:
-          # Current scope - e.g. Dev, DevTest etc.
-          scope: production
-          # full path and filename of the configuration file or just the filename
-          configFile: 'Json-variables.json'
-          # All the secrets serialized as json
-          secrets: '${{ toJson(secrets) }}'
     
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
