--- a/.github/workflows/json-variables-test.yml
+++ b/.github/workflows/json-variables-test.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     
     environment:
-      name: ${{'production' if github.ref_name == 'master' }}
+      name: ${{ github.ref_name }}
 
 
     # Steps represent a sequence of tasks that will be executed as part of the job
