--- a/.github/workflows/bicep-validate-deploy.yml
+++ b/.github/workflows/bicep-validate-deploy.yml
@@ -29,6 +29,12 @@ jobs:
       name: ${{ github.ref_name }}
 
     steps:
+
+    - name: Get the Variables context
+      shell: bash
+      run: echo "$VARIABLES_CONTEXT"
+      env:
+        VARIABLES_CONTEXT: ${{ toJson(vars) }}    
     
     # Checkout the repository to the GitHub Actions runner
     # Download all the code into the host
