--- a/.github/workflows/bicep-validate-deploy.yml
+++ b/.github/workflows/bicep-validate-deploy.yml
@@ -63,6 +63,7 @@ jobs:
           az deployment sub validate \
             --name validate-${{ github.run_id }} \
             --template-file main.bicep \
+            --parameters ${{ toJson(vars) }} \
             --location ${{ vars.AZURE_RG_LOCATION }}
 
     # Perform a security scan of the bicep code using checkov
@@ -80,6 +81,7 @@ jobs:
           az deployment sub what-if \
             --name whatif-${{ github.run_id }} \
             --template-file main.bicep \
+            --parameters ${{ toJson(vars) }} \
             --location ${{ vars.AZURE_RG_LOCATION }} > whatif
 
     # Create string output of Whatif
