--- a/.github/workflows/bicep-validate-deploy.yml
+++ b/.github/workflows/bicep-validate-deploy.yml
@@ -63,7 +63,7 @@ jobs:
           az deployment sub validate \
             --name validate-${{ github.run_id }} \
             --template-file main.bicep \
-            --location ${{ vars.AZURE_RG_LOCATION }} \
+            --location ${{ vars.LOCATIONRG }} \
             --parameters ${{ toJson(vars) }}
 
     # Perform a security scan of the bicep code using checkov
@@ -81,7 +81,7 @@ jobs:
           az deployment sub what-if \
             --name whatif-${{ github.run_id }} \
             --template-file main.bicep \
-            --location ${{ vars.AZURE_RG_LOCATION }} > whatif
+            --location ${{ vars.LOCATIONRG }} > whatif
 
     # Create string output of Whatif
     - name: Create String Output
