--- a/.github/workflows/bicep-validate-deploy.yml
+++ b/.github/workflows/bicep-validate-deploy.yml
@@ -35,6 +35,18 @@ jobs:
       run: echo "$VARIABLES_CONTEXT"
       env:
         VARIABLES_CONTEXT: ${{ toJson(vars) }}    
+
+    - name: Create-json
+      # You may pin to the exact commit or the version.
+      # uses: jsdaniell/create-json@b8e77fa01397ca39cc4a6198cc29a3be5481afef
+      uses: jsdaniell/create-json@v1.2.3
+      with:
+        # The name of the file to be written. | file.json 
+        name: 'parameters_json.json'
+        # The json string that can be a secret of the github repo or a string of a json. | "{"title": "my json"}" 
+        json: ${{ toJson(vars) }}
+        # Optional subfolder directory to save the json file. | src/ 
+        #dir: # optional        
     
     # Checkout the repository to the GitHub Actions runner
     # Download all the code into the host
@@ -63,8 +75,8 @@ jobs:
           az deployment sub validate \
             --name validate-${{ github.run_id }} \
             --template-file main.bicep \
-            --location ${{ vars.LOCATIONRG }} \
-            --parameters ${{ toJson(vars) }}
+            --parameters parameters_json.json \
+            --location ${{ vars.LOCATIONRG }}
 
     # Perform a security scan of the bicep code using checkov
     - name: Run Checkov action
@@ -81,6 +93,7 @@ jobs:
           az deployment sub what-if \
             --name whatif-${{ github.run_id }} \
             --template-file main.bicep \
+            --parameters parameters_json.json \
             --location ${{ vars.LOCATIONRG }} > whatif
 
     # Create string output of Whatif
