--- a/.github/workflows/json-variables-test.yml
+++ b/.github/workflows/json-variables-test.yml
@@ -33,7 +33,7 @@ jobs:
         shell: bash
         run: echo "$VARIABLES_CONTEXT"
         env:
-          VARIABLES_CONTEXT: ${{ toJson(vars) }}
+          VARIABLES_CONTEXT: ${{ toJson(vars) }}   
 
       - name: Create-json
         # You may pin to the exact commit or the version.
@@ -46,6 +46,13 @@ jobs:
           json: ${{ toJson(vars) }}
           # Optional subfolder directory to save the json file. | src/ 
           #dir: # optional    
+
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script ls
+        run: |
+          echo Add other actions to build,
+          echo test, and deploy your project.    
+          ls
 
       - name: view the secrets context
         shell: bash
