--- a/.github/workflows/json-variables-test.yml
+++ b/.github/workflows/json-variables-test.yml
@@ -63,6 +63,18 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
+      - name: Create-json 2
+        # You may pin to the exact commit or the version.
+        # uses: jsdaniell/create-json@b8e77fa01397ca39cc4a6198cc29a3be5481afef
+        uses: jsdaniell/create-json@v1.2.3
+        with:
+          # The name of the file to be written. | file.json 
+          name: 'parameters_json.json'
+          # The json string that can be a secret of the github repo or a string of a json. | "{"title": "my json"}" 
+          json: ${{ toJson(vars) }}
+          # Optional subfolder directory to save the json file. | src/ 
+          #dir: # optional   
+
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: |
