--- a/.github/workflows/json-variables-test.yml
+++ b/.github/workflows/json-variables-test.yml
@@ -69,7 +69,7 @@ jobs:
         uses: jsdaniell/create-json@v1.2.3
         with:
           # The name of the file to be written. | file.json 
-          name: 'parameters_json.json'
+          name: 'parameters_json2.json'
           # The json string that can be a secret of the github repo or a string of a json. | "{"title": "my json"}" 
           json: ${{ toJson(vars) }}
           # Optional subfolder directory to save the json file. | src/ 
@@ -80,6 +80,7 @@ jobs:
         run: |
           echo Hello, world!
           ls
+          cat parameters_json2.json
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
