--- a/.github/workflows/json-variables-test.yml
+++ b/.github/workflows/json-variables-test.yml
@@ -81,6 +81,7 @@ jobs:
           echo Hello, world!
           ls
           cat parameters_json2.json
+          cat parameters_json.json
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
