--- a/.github/workflows/json-variables-test.yml
+++ b/.github/workflows/json-variables-test.yml
@@ -75,6 +75,13 @@ jobs:
           # Optional subfolder directory to save the json file. | src/ 
           #dir: # optional   
 
+      - name: Set environment specific variables
+        uses: jnus/json-variables@4a442c701d13455259c65b315c7dce51d1c9edf7
+        with:
+          scope: ${{ github.ref_name }}
+          configFile: 'parameters_json.json'
+          secrets: '${{ toJson(vars) }}'
+
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: |
