--- a/.github/workflows/json-variables-test.yml
+++ b/.github/workflows/json-variables-test.yml
@@ -77,7 +77,7 @@ jobs:
 
       - name: Run a one-line script Create Json String
         run: |
-          jq -n --arg appname "JsonTest" '{\$schema: "https://schema.management.azure.com/schemas/2019-04-01/deploymentParameters.json#", contentVersion: "1.0.0.0", parameters: {resourceGroupName:{value:"ValorPrueba"}}}' > process.json    
+          jq -n --arg appname "JsonTest" '{$schema: "https://schema.management.azure.com/schemas/2019-04-01/deploymentParameters.json#", contentVersion: "1.0.0.0", parameters: {resourceGroupName:{value:"ValorPrueba"}}}' > process.json    
 
       - name: Replace values in JSON file
         uses: tnikFi/json-file-transform@v1
