--- a/.github/workflows/json-variables-test.yml
+++ b/.github/workflows/json-variables-test.yml
@@ -63,6 +63,13 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
+      - name: view the variables context 22
+        shell: bash
+        run: |
+          set $VARIABLES_CONTEXT2 = ${{ toJson(vars) }}
+          echo Muestra
+          echo $VARIABLES_CONTEXT2
+
       - name: Create-json 2
         # You may pin to the exact commit or the version.
         # uses: jsdaniell/create-json@b8e77fa01397ca39cc4a6198cc29a3be5481afef
