--- a/.github/workflows/json-variables-test.yml
+++ b/.github/workflows/json-variables-test.yml
@@ -64,6 +64,7 @@ jobs:
         run: |
           echo Hello, world!
           ls
+          ls IaC
           cat parameters_json.json
 
       # Runs a set of commands using the runners shell
