--- a/.github/workflows/json-variables-test.yml
+++ b/.github/workflows/json-variables-test.yml
@@ -65,7 +65,7 @@ jobs:
           echo Hello, world!
           ls
           ls IaC
-          cat parameters_json.json
+          cat IaC/parameters_json.json
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
