--- a/.github/workflows/bicep-validate-deploy.yml
+++ b/.github/workflows/bicep-validate-deploy.yml
@@ -44,6 +44,7 @@ jobs:
           parameters.resourceGroupName.value=${{ vars.resourceGroupName }}
           parameters.environment.value=${{ vars.environment }}
           parameters.tenantId.value=${{ vars.tenantId }}
+          parameters.kvName.value=${{ vars.kvName }}
 
     # Authenticate to Az CLI using OIDC
     - name: Azure Login
@@ -112,14 +113,7 @@ jobs:
       run: |
         echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
 
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        ls
-        
-
-    - name: Run a multi-line script 2
+    - name: Show What If
       run: |
         cat whatif
       
