--- a/.github/workflows/models-deploy.yml
+++ b/.github/workflows/models-deploy.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
 
     # Deploy Custom Vision Model and publish
-    - name: Set Environment Variables
+    - name: Deploy Calsification Model Vision
       uses: Azure/cli@v2
       with:
         inlineScript: |
@@ -31,7 +31,7 @@ jobs:
           $TrainingKeySource = "${{ vars.customVisionTrainingKeySource }}"
           $headers.Add("Training-key", $TrainingKeySource)
           
-          $projectName = "${{ vars.customVisionProjectName }}"
+          $projectName = "${{ vars.customVisionProjectName1 }}"
           $idProject = "0"
           
           $customVisionSourceURL = "https://${{ vars.customVisionNameExport }}.cognitiveservices.azure.com/"
@@ -75,12 +75,12 @@ jobs:
           
           Write-Host $token
           
-          $TrainingKeySink = "2dd08ce8b7eb44e985dbd8b8bde489dc"
+          $TrainingKeySink = "${{ vars.customVisionTrainingKeySink }}"
           $headers = New-Object "System.Collections.Generic.Dictionary[[String],[String]]"
           $headers.Add("Training-key", $TrainingKeySink)
           $headers.Add("Content-Length", 0)
           
-          $projectNameSink = "${{ vars.customVisionProjectName }}"
+          $projectNameSink = "${{ vars.customVisionProjectName1 }}"
           
           $tokenReplaced = $token.Replace("&","%26")
           
@@ -92,6 +92,76 @@ jobs:
           $response = (Invoke-RestMethod $URI_Request_ImportProject -Method 'POST' -Headers $headers)
           
           Write-Host $response
+
+    - name: Deploy Object Detection Model Vision
+      uses: Azure/cli@v2
+      with:
+        inlineScript: |
+          $headers = New-Object "System.Collections.Generic.Dictionary[[String],[String]]"
+          $TrainingKeySource = "${{ vars.customVisionTrainingKeySource }}"
+          $headers.Add("Training-key", $TrainingKeySource)
+          
+          $projectName = "${{ vars.customVisionProjectName2 }}"
+          $idProject = "0"
+          
+          $customVisionSourceURL = "https://${{ vars.customVisionNameExport }}.cognitiveservices.azure.com/"
+          $endpoint_GetProjects = "customvision/v3.3/Training/projects"
+          
+          
+          $URI_Request_GetProjects = $customVisionSourceURL+$endpoint_GetProjects
+          
+          #Get Project ID
+          $response = (Invoke-RestMethod $URI_Request_GetProjects -Method 'GET' -Headers $headers)
+          
+          
+          for ($i = 0; $i -lt $response.Length; $i++)
+          {
+              if ( $projectName -eq $response[$i].name )
+              {
+                  # do something
+                  $idProject = $response[$i].id
+                  break
+              }
+          }
+          
+          if ( $idProject -eq "0" )
+              {
+                  # do something
+                  Write-Host "No existe un proyecto con el nombre $projectName"
+                  
+              }
+          
+          Write-Host $idProject
+          
+          $headers = New-Object "System.Collections.Generic.Dictionary[[String],[String]]"
+          $headers.Add("Training-key", $Training_key)
+          
+          $endpoint_GetExport = "customvision/v3.3/Training/projects/$idProject/export?Training-key=$TrainingKeySource"
+          
+          $URI_Request_GetExport = $customVisionSourceURL+$endpoint_GetExport
+          
+          #Get Export Project Token
+          $token = (Invoke-RestMethod $URI_Request_GetExport -Method 'GET').token
+          
+          Write-Host $token
+          
+          $TrainingKeySink = "${{ vars.customVisionTrainingKeySink }}"
+          $headers = New-Object "System.Collections.Generic.Dictionary[[String],[String]]"
+          $headers.Add("Training-key", $TrainingKeySink)
+          $headers.Add("Content-Length", 0)
+          
+          $projectNameSink = "${{ vars.customVisionProjectName2 }}"
+          
+          $tokenReplaced = $token.Replace("&","%26")
+          
+          $customVisionSinkURL = "https://${{ vars.customVisionName }}.cognitiveservices.azure.com/"
+          $endpoint_ImportProject = "customvision/v3.3/Training/projects/import?token=$tokenReplaced&name=$projectNameSink"
+          
+          $URI_Request_ImportProject = $customVisionSinkURL+$endpoint_ImportProject
+          
+          $response = (Invoke-RestMethod $URI_Request_ImportProject -Method 'POST' -Headers $headers)
+          
+          Write-Host $response      
           
     # Deploy Document Intelligence Model
     - name: Set Environment Variables
@@ -100,24 +170,26 @@ jobs:
         inlineScript: |
 
           $headers = New-Object "System.Collections.Generic.Dictionary[[String],[String]]"
-          $documentIntelligenceTargetKey = "5a559ac95dec4e90aa66cd68d477307f"
+          $documentIntelligenceTargetKey = "${{ vars.documentIntelligenceTargetKey }}"
           $headers.Add("Ocp-Apim-Subscription-Key", $documentIntelligenceTargetKey)
-
-
-          $documentIntelligenceSourceURL = "https://eastus2.api.cognitive.microsoft.com/"
-          $endpoint_AuthorizeCopy = "formrecognizer/documentModels:authorizeCopy?api-version=2022-08-31"
-
-
+          
+          
+          $documentIntelligenceSourceURL = "https://${{ vars.locationRG }}.api.cognitive.microsoft.com/"
+          $endpoint_AuthorizeCopy = "formrecognizer/documentModels:authorizeCopy?api-version=2023-07-31"
+          
+          
           $URI_Request_AuthorizeCopy = $documentIntelligenceSourceURL+$endpoint_AuthorizeCopy
-
-          $documentIntelligenceModelName = "Iteracion2-neural"
-
+          
+          $documentIntelligenceModelName = "${{ vars.documentIntelligenceSourceModelName }}"
+          
+          $documentIntelligenceTargetModelName = "${{ vars.documentIntelligenceTargetModelName }}"
+          
           $params = @{
-          "modelId"=$documentIntelligenceModelName
+          "modelId"=$documentIntelligenceTargetModelName
           "description"="Taggeo de VIN y Placa para todos los 102 documentos"
           } | ConvertTo-Json
-
-
+          
+          
           try {
               #Get Copy Auth
               $response = (Invoke-RestMethod $URI_Request_AuthorizeCopy -Method 'POST' -Headers $headers -Body $params -ContentType "application/json")
@@ -129,30 +201,28 @@ jobs:
               Write-Host "StatusCode:" $_.Exception.Response.StatusCode.value__ 
               Write-Host "StatusDescription:" $_.Exception.Response.StatusDescription
               $status = "Conflict"
-
+          
           }
-
+          
           if ( $status -eq "Conflict" )
               {
-
+          
                   Write-Host "Nombre del proyecto ocupado"
                   
               }
-
+          
           #Copy 
-
+          
           $headers = New-Object "System.Collections.Generic.Dictionary[[String],[String]]"
-          $documentIntelligenceSourceKey = "1bcc168accb740f09a59b7313db475a4"
+          $documentIntelligenceSourceKey = "${{ vars.documentIntelligenceSourceKey }}"
           $headers.Add("Ocp-Apim-Subscription-Key", $documentIntelligenceSourceKey)
-
-
-          $documentIntelligenceSourceURL = "https://eastus2.api.cognitive.microsoft.com/"
-          $endpoint_Copy = "formrecognizer/documentModels/$documentIntelligenceModelName:copyTo?api-version=2022-08-31"
-
-          $params = @{
-          "modelId"=$documentIntelligenceModelName
-          "description"="Taggeo de VIN y Placa para todos los 102 documentos"
-          } | ConvertTo-Json
-
-          $URI_Request_Copy = $documentIntelligenceSourceURL+$endpoint_Copy
-          $response = (Invoke-RestMethod $URI_Request_Copy -Method 'POST' -Headers $headers -Body $response -ContentType "application/json")
+          
+          
+          $documentIntelligenceSourceURL = "https://${{ vars.locationRG }}.api.cognitive.microsoft.com/"
+          $endpoint_CopyFirst = "formrecognizer/documentModels/"
+          $endpoint_CopyLast = ":copyTo?api-version=2023-07-31"
+          
+          $params = $response | ConvertTo-Json
+          
+          $URI_Request_Copy = $documentIntelligenceSourceURL+$endpoint_CopyFirst+$documentIntelligenceModelName+$endpoint_CopyLast
+          $response = (Invoke-RestMethod $URI_Request_Copy -Method 'POST' -Headers $headers -Body $params -ContentType "application/json")
