--- a/.github/workflows/function-app-deploy.yml
+++ b/.github/workflows/function-app-deploy.yml
@@ -2,9 +2,9 @@ name: Deploy Python project to Azure Function App
 
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: 
-    - main
+  #push:
+    #branches: 
+    #- main
   #pull_request:
     #branches:
     #- main
