--- a/.github/workflows/models-deploy.yml
+++ b/.github/workflows/models-deploy.yml
@@ -13,7 +13,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  export-and-deploy:
     runs-on:  ubuntu-latest
     environment:
       name: ${{ github.ref_name }}
